// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ProductInfoBadge should render properly with AvailabilityButton when hasNearbyStores is true 1`] = `
<glamorous(div)
  visibility={true}
>
  <MarketingFlag
    loyaltyProgram={Object {}}
    marketingAttributes={Object {}}
    promotionCode="0"
    topLeftStyle={
      Object {
        "&>#novita_badge": Object {
          "marginLeft": "-8px",
          "marginTop": "-9px",
        },
        "&>img": Object {
          "marginLeft": "-14px",
          "marginTop": "-13px",
        },
      }
    }
    topRightStyle={
      Object {
        "&>div": Object {
          "marginRight": "0px",
        },
      }
    }
    wrapperStyle={
      Object {
        "display": "flex",
        "justifyContent": "space-between",
      }
    }
  />
  <PriceBadge
    price={Object {}}
    pricingInfo={Object {}}
  />
  <glamorous(div)
    height="auto"
    id="AnimatedWrapper"
  >
    <glamorous(div) />
    <glamorous(div)>
      <Connect(StoreStockBadge)
        currentStoreStock={Object {}}
      />
    </glamorous(div)>
    <AvailabilityButton
      collapse={true}
      productCode="foobar"
      productName="foobar"
    />
    <glamorous(div)
      style={Object {}}
    />
    <PurchaseDialog
      productCode="foobar"
      productSlug="foobar"
    >
      <glamorous(div)
        background="#67cb33"
      >
        Acquista online
      </glamorous(div)>
    </PurchaseDialog>
  </glamorous(div)>
</glamorous(div)>
`;

exports[`ProductInfoBadge should render properly without AvailabilityButton when hasNearbyStores is false 1`] = `
<glamorous(div)
  visibility={true}
>
  <MarketingFlag
    loyaltyProgram={Object {}}
    marketingAttributes={Object {}}
    promotionCode="0"
    topLeftStyle={
      Object {
        "&>#novita_badge": Object {
          "marginLeft": "-8px",
          "marginTop": "-9px",
        },
        "&>img": Object {
          "marginLeft": "-14px",
          "marginTop": "-13px",
        },
      }
    }
    topRightStyle={
      Object {
        "&>div": Object {
          "marginRight": "0px",
        },
      }
    }
    wrapperStyle={
      Object {
        "display": "flex",
        "justifyContent": "space-between",
      }
    }
  />
  <PriceBadge
    price={Object {}}
    pricingInfo={Object {}}
  />
  <glamorous(div)
    height="auto"
    id="AnimatedWrapper"
  >
    <glamorous(div) />
    <glamorous(div)>
      <Connect(StoreStockBadge)
        currentStoreStock={Object {}}
      />
    </glamorous(div)>
    <glamorous(div)
      style={Object {}}
    />
    <PurchaseDialog
      productCode="foobar"
      productSlug="foobar"
    >
      <glamorous(div)
        background="#67cb33"
      >
        Acquista online
      </glamorous(div)>
    </PurchaseDialog>
  </glamorous(div)>
</glamorous(div)>
`;
